assets/css/style.css
/* ... */
.planyy_hed_p3_s1 {
  margin-top: 14px;
}

@media screen and (max-width: 1023px) {
  .stepsidemenu_box .planyy_hed_p3 {
    margin-right: 20px;
  }

  .stepsidemenu_box .planyy_hed_p3_s2 h5 {
    margin-top: 27px;
  }
}
/* 
@media screen and (max-width: 575px) {
  
}
  .stepsidemenu_p1 #progressbar.xtmclass_ul {

  } */
@media screen and (min-width: 1024px) {
  .planyy_hed_p3_s2 h5 {
    margin-top: 29px;
  }
}
@media screen and (max-width: 1919px) {
  .planyy_hed_p3 {
    margin-top: 12px;
  }
}

@media screen and (min-width: 1920px) {
  .planyy_hed_p3 {
    margin-top: 22px;
  }
}

@media screen and (max-width: 1919px) and (min-width: 1366px) {
  .planyybody.sidebaractive .slider_text_p1 h3 {
    line-height: 44px;
  }
}

@media screen and (max-width: 768px) and (min-width: 576px) {
  .slider_text_p1 h2 {
    line-height: 74px;
  }
}

.planyybody .slider_text_p1 h2 {
  line-height: 1.5 !important;
}

.slider_text_p1 h3 {
  line-height: 1 !important;
}

.slider_text_cont {
  top: 45%;
}

.slider_text_cont_p1 {
  margin-top: 0;
}

.planyybody p {
  word-spacing: initial;
}

.step3-cta {
  /* bottom: 93px !important; */
}

@media screen and (max-width: 575px) {
  .withdrawalmony_p1 {
    display: flex;
    flex-direction: column;
  }

  .withdrawalmony_p1 .withdrawalmony_box1,
  .withdrawalmony_p1 .withdrawalmony_box2 {
    width: 100%;
    margin: 0.5rem 0;
  }

  .withdrawalmony_p1_s1 h3,
  .withdrawalmony_box2 .withdrawalmony_p1_s1 h3 {
    margin-top: 0.5rem;
  }
}

@media screen and (max-width: 370px) {
  .st2 .msochartdata_p1 {
    padding: 0 8px;
  }
}

@media screen and (max-width: 370px) {
  .st2 .msochartdata_p1 {
    padding: 0 8px;
  }
}

@media screen and (max-width: 768px) {
  .msochartdata_p1 {
    margin-top: 60px;
  }
}

@media screen and (max-width: 370px) {
  .msochartdata_p1 {
    overflow: hidden;
  }

  .movecanvaspie {
    width: 200%;
  }
}
.movecanvaspie {
}

@media screen and (min-width: 1024px) {
  .cute.slider-pips .slider-pips__float > *:not(img):not(.msopaors) {
    opacity: 0;
    transition: 0.4s ease;
  }

  .cute.slider-pips:hover .slider-pips__float > *:not(img):not(.msopaors) {
    opacity: 1;
  }
}

.planyy_hed_p4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  top: 40px;
  padding-left: 32px;
  border-left: 1px solid #b2b2b2;
}

.planyy_hed_p2_s1 input.monthly-expenses-input {
  margin-right: 20px;
}

.planyy_hed_p4 .arrow {
  margin-left: 8px;
}

@media screen and (max-width: 1920px) {
  .planyy_hed_p2_s1 {
    margin-left: 58px;
  }

  .planyy_hed_p1 h2 {
    padding-left: 0;
  }

  .planyy_contain {
    max-width: 1200px;
  }

  .planyy_hed_p4 {
    width: 180px;
    position: absolute;
    right: 0;
    top: 50%;
  }
}

@media screen and (max-width: 1920px) and (min-width: 1023px) {
  .planyy_hed_p3 {
    margin-left: 450px;
    transform: scale(0.85);
    margin-top: 18px;
  }
}

@media screen and (min-width: 1921px) {
  #footer.service-page {
    margin-top: 39vh;
  }
}

@media screen and (max-width: 575px) {
  #footer.service-page {
    margin-top: 3px;
  }
}

@media screen and (max-width: 1920px) {
  .fieldset_data {
    max-height: calc(100vh - 318px);
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .fieldset_data {
    max-height: calc(100vh - 53px);
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .fieldset_data {
    max-height: calc(100vh - 173px);
  }
}

@media screen and (max-width: 768px) {
  .fieldset_data {
    max-height: calc(100vh - 173px);
  }
}

#msform fieldset .bottom-btn-sm.all {
  position: sticky !important;
}

@media screen and (min-width: 769px) and (max-width: 1280px) {
  .planyy_contain {
    margin-left: 40px;
    margin-right: 40px;
  }
}

@media screen and (min-width: 769px) and (max-width: 1359px) {
  .planyy_hed_p4 .item img {
    width: 15px;
    height: 15px;
  }

  .planyy_hed_p4 {
    width: 150px;
  }
}

@media screen and (min-width: 769px) and (max-width: 1359px) {
  .planyy_hed_p2_s1 input {
    margin-right: 0;
  }
}

@media screen and (min-width: 1023px) and (max-width: 1144px) {
  .planyy_hed_p2_s1 input.monthly-expenses-input {
    margin-right: 0;
  }

  .planyy_hed_p3 {
    margin-left: 350px;
    transform: scale(0.6) translateY(18px);
    margin-top: 18px;
  }

  .planyy_hed_p2_s1 {
    margin-left: 30px;
  }
}

@media screen and (max-width: 370px) {
  .stepsidemenu_box .planyy_hed_p3 {
    margin-left: 0;
  }
}

@media screen and (max-width: 1920px) {
  .fieldset_data {
    max-height: calc(100vh - 190px);
  }
}

@media screen and (max-width: 575px) {
  
  #exampleModal2 .close  {
 width: 24px;
 height: 24px;   
  }

  #exampleModal2 .close  img{
 width: 100%;
  }
}

@media screen and (max-width: 575px) {
  
  .planyy_hed_p3_s2 h5 {
 margin-right: 0;   
  }
}

